Writing stats to text file should be working, just need to reset